support ESP8266 add client() function append keywords add basic example

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AsyncHttpClient
-version=1.0.0
-author=Robert Wallner <robert@scinova.net>
+version=1.1.0
+author=Robert Wallner <robert@scinova.net> & Ali Mirghasemi
 maintainer=Robert Wallner <robert@scinova.net>
-sentence=Async HTTP Library for ESP32
-paragraph=Async HTTP Library for ESP32
+sentence=Async HTTP Library for ESP32 & ESP8266
+paragraph=Async HTTP Library for ESP32 & ESP8266
 category=Other
-url=https://github.com/scinova/AsyncHttpClient
+url=https://github.com/Ali-Mirghasemi/AsyncHttpClient
 architectures=*
